--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@ window.onload = function() {
     }
 }
 
-var s3 = "5a%32%6b%4c%59%62%36%5a%68%62%74%5a%63%75%6f%62%78%4a%76%43%31%37%41%66%57%4"
-var countDownDate = 1651144800000;
+var s3 = "%55%5a%75%41%36%6f%68%64%39%56%5a%47%45%6d%43%64%31%70%57%38%68%74%31%52%77/%76%69"
+var countDownDate = 1651146000000;
 var now1;
-var k1 = "%64%6f%63%73%2e%67%6f%6f%67%6c%65%2e%63%6f%6d/%66%6f%72%6d%73/%64/%65/%31%46"
+var k1 = "%64%6f%63%73%2e%67%6f%6f%67%6c%65%2e%63%6f%6d/%66%6f%72%6d%73/%64/%65/%31%46%41%49"
 var flag = 0;
 
-var b4 = "b%4c%6f%41/%76%69%65%77%66%6f%72%6d?%75%73%70=%73%66%5f%6c%69%6e%6b"
+var b4 = "%65%77%66%6f%72%6d?%75%73%70=%73%66%5f%6c%69%6e%6b"
 
 fetch('https://worldtimeapi.org/api/timezone/Asia/Kolkata')
   .then(res => res.json())
@@ -72,7 +72,7 @@ fetch('https://worldtimeapi.org/api/timezone/Asia/Kolkata')
 
 
 now = obj * 1000
-var v2 = "%41%49%70%51%4c%53%66%71%4b%53%45%53%49%57%41%69%70%50%6e%4a%77%44%7a%51%58%" 
+var v2 = "%70%51%4c%53%63%73%4e%36%53%5f%4c%6e%58%41%34%62%6d%68%72%46%6e%6f%48%5f%6b%50%42" 
 var x = setInterval(function() {
 
   now =  now + 1000
