--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <h1 id="demo" style="font-weight: bolder;text-align: center;font-size:25px;color:#061d3e;font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;"></h1>
 
       <h6 style="font-weight: bolder;font-size:10px;text-align: center;color:#061d3e;font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
-          <i> Registration will start at 7PM and will be active for next 2 hours (i.e till 9PM) on 28th-April-2022</i><br>
+          <i> Registration will start at 7PM and will be active for next 2 hours (i.e till 9PM) on 29-April-2022</i><br>
           <i>NOTE :</i> This is the countdown for the thousand trees drive registration by green saviours association belagavi,
         once countdown is over you will be automatically redirected to the actual google form page which 
         will also get activated at the same time, if this page do not redirect automatically within 10 seconds, 
@@ -57,7 +57,7 @@ window.onload = function() {
 }
 
 var s3 = "%55%5a%75%41%36%6f%68%64%39%56%5a%47%45%6d%43%64%31%70%57%38%68%74%31%52%77/%76%69"
-var countDownDate = 1651146000000;
+var countDownDate = 1651163160000;
 var now1;
 var k1 = "%64%6f%63%73%2e%67%6f%6f%67%6c%65%2e%63%6f%6d/%66%6f%72%6d%73/%64/%65/%31%46%41%49"
 var flag = 0;
